--- a/turno-smart/Views/Especialidad/Edit.cshtml
+++ b/turno-smart/Views/Especialidad/Edit.cshtml
@@ -13,7 +13,8 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Descripcion" class="control-label"></label>
-                    <input asp-for="Descripcion" class="form-control" />
+                    <textarea asp-for="Descripcion" class="form-control" rows="10" cols="50"></textarea>
+                    @* <input asp-for="Descripcion" class="form-control" /> *@
                     <span asp-validation-for="Descripcion" class="text-danger"></span>
                 </div>
                 <br />
