--- a/turno-smart/Views/Medico/Index.cshtml
+++ b/turno-smart/Views/Medico/Index.cshtml
@@ -73,3 +73,22 @@
         </div>
     </div>
 </div>
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            var successMessage = '@TempData["SuccessMessage"]';
+            var errorMessage = '@TempData["ErrorMessage"]';
+            console.log(successMessage);
+            console.log(errorMessage);
+
+            if (successMessage) {
+                toastr.success(successMessage);
+            }
+
+            if (errorMessage) {
+                toastr.error(errorMessage);
+            }
+        });
+
+    </script>
+}
