--- a/turno-smart/Views/Shared/_AgendaDiaria.cshtml
+++ b/turno-smart/Views/Shared/_AgendaDiaria.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ListTurnosVM
+@using System.Globalization
 <h1 class="display-4 text-center mb-2">Mi Agenda</h1>
 <p class="text-center text-muted mb-5">Administrá tus consultas programadas</p>
 <div class="container-fluid px-0 d-flex flex-column" style={{ minHeight: 'calc(100vh - 200px)' }}>
@@ -61,8 +62,24 @@
                                         @turno.MotivoConsulta
                                     </td>
                                     <td class="align-middle">
-                                        <span class="badge @(turno.Estado == "CONFIRMADO" ? "bg-success" : "bg-warning")">
-                                            @(turno.Estado == "CONFIRMADO" ? "Confirmado" : "Reservado")
+                                        @{
+                                            var badgeBG = "";
+                                            if (turno.Estado.ToLower() == "confirmado")
+                                            {
+                                                badgeBG = "bg-success";
+                                            }
+                                            else if (turno.Estado.ToLower() == "reservado")
+                                            {
+                                                badgeBG = "bg-warning";
+                                            }
+                                            else if (turno.Estado.ToLower() == "cancelado")
+                                            {
+                                                badgeBG = "bg-danger";
+                                            }
+                                            var ti = CultureInfo.CurrentCulture.TextInfo;
+                                        }
+                                        <span class="badge @badgeBG">
+                                            @ti.ToTitleCase(turno.Estado)
                                         </span>
                                     </td>
                                     <td class="text-end pe-4 align-middle">
@@ -72,11 +89,12 @@
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-text me-2"><path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"></path><path d="M14 2v4a2 2 0 0 0 2 2h4"></path><path d="M10 9H8"></path><path d="M16 13H8"></path><path d="M16 17H8"></path></svg>
                                                 Historia Clínica
                                             </button>
-                                            <button class="btn btn-warning btn-sm"
-                                                    onClick="">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-calendar me-2"><path d="M8 2v4"></path><path d="M16 2v4"></path><rect width="18" height="18" x="3" y="4" rx="2"></rect><path d="M3 10h18"></path></svg>
-                                                Reprogramar
-                                            </button>
+                                            <form method="get" asp-action="Delete" asp-controller="Turno" asp-route-id="@turno.TurnoId" id="delete-btn">
+                                                <button type="submit" class="btn btn-warning btn-sm ms-2" data-bs-toggle="modal" data-bs-target="#modal-delete">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-calendar me-2"><path d="M8 2v4"></path><path d="M16 2v4"></path><rect width="18" height="18" x="3" y="4" rx="2"></rect><path d="M3 10h18"></path></svg>
+                                                    Cancelar
+                                                </button>
+                                            </form>
                                         </div>
                                     </td>
                                 </tr>
@@ -95,6 +113,29 @@
                     </tbody>
                 </table>
             </div>
+        </div>
+    </div>
+</div>
+<!-- Modal de Edit-->
+<div id="modal-edit" class="modal fade" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div id='modal-edit-content'></div>
+        </div>
+    </div>
+</div>
+<!-- Modal de Create-->
+<div id="modal-create" class="modal fade" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div id='modal-create-content'></div>
+        </div>
+    </div>
+</div>
+<!-- Modal de Delete -->
+<div id="modal-delete" class="modal fade" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content" id="modal-delete-content">
         </div>
     </div>
 </div>
