--- a/turno-smart/Views/Shared/_AgendaDiaria.cshtml
+++ b/turno-smart/Views/Shared/_AgendaDiaria.cshtml
@@ -1,5 +1,9 @@
 ﻿@model ListTurnosVM
 @using System.Globalization
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<Usuarios> SignInManager
+@inject UserManager<Usuarios> UserManager
+
 <h1 class="display-4 text-center mb-2">Mi Agenda</h1>
 <p class="text-center text-muted mb-5">Administrá tus consultas programadas</p>
 <div class="container-fluid px-0 d-flex flex-column" style={{ minHeight: 'calc(100vh - 200px)' }}>
@@ -84,17 +88,30 @@
                                     </td>
                                     <td class="text-end pe-4 align-middle">
                                         <div class="btn-group">
-                                            <button class="btn btn-primary btn-sm"
-                                                    onClick="">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-text me-2"><path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"></path><path d="M14 2v4a2 2 0 0 0 2 2h4"></path><path d="M10 9H8"></path><path d="M16 13H8"></path><path d="M16 17H8"></path></svg>
-                                                Historia Clínica
-                                            </button>
+                                            @if (User.IsInRole("Medico"))
+                                            {
+                                                <button class="btn btn-primary btn-sm"
+                                                onClick="">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-text me-2"><path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"></path><path d="M14 2v4a2 2 0 0 0 2 2h4"></path><path d="M10 9H8"></path><path d="M16 13H8"></path><path d="M16 17H8"></path></svg>
+                                                    Historia Clínica
+                                                </button>
+                                            }
+                                            else
+                                            {
+                                                <form method="post" asp-action="TurnoConfirmed" asp-controller="Turno" asp-route-id="@turno.TurnoId">
+                                                    <button type="submit" class="btn btn-sucess btn-sm ms-2">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-calendar me-2"><path d="M8 2v4"></path><path d="M16 2v4"></path><rect width="18" height="18" x="3" y="4" rx="2"></rect><path d="M3 10h18"></path></svg>
+                                                        Confirmar
+                                                    </button>
+                                                </form>
+                                            }
                                             <form method="get" asp-action="Delete" asp-controller="Turno" asp-route-id="@turno.TurnoId" id="delete-btn">
                                                 <button type="submit" class="btn btn-warning btn-sm ms-2" data-bs-toggle="modal" data-bs-target="#modal-delete">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-calendar me-2"><path d="M8 2v4"></path><path d="M16 2v4"></path><rect width="18" height="18" x="3" y="4" rx="2"></rect><path d="M3 10h18"></path></svg>
                                                     Cancelar
                                                 </button>
                                             </form>
+
                                         </div>
                                     </td>
                                 </tr>
