--- a/turno-smart/Views/Paciente/Create.cshtml
+++ b/turno-smart/Views/Paciente/Create.cshtml
@@ -15,48 +15,61 @@
                 <div class="card-body p-5">
                     <form method="post">
                         <div class="mb-3">
-                            <label for="Nombre" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="Nombre" name="Nombre" value="@Model.Nombre" required />
+                            <label asp-for="Nombre" class="form-label"></label>
+                            <input asp-for="Nombre" class="form-control" />
+                            <span asp-validation-for="Nombre" class="text-danger"></span>
                         </div>
 
                         <div class="mb-3">
-                            <label for="Apellido" class="form-label">Apellido</label>
-                            <input type="text" class="form-control" id="Apellido" name="Apellido" value="@Model.Apellido" required />
+                            <label asp-for="Apellido" class="form-label"></label>
+                            <input asp-for="Apellido" class="form-control" />
+                            <span asp-validation-for="Apellido" class="text-danger"></span>
                         </div>
 
                         <div class="mb-3">
-                            <label for="DNI" class="form-label">DNI</label>
-                            <input type="number" class="form-control" id="DNI" name="DNI" value="@Model.DNI" required />
+                            <label asp-for="DNI" class="form-label"></label>
+                            <input asp-for="DNI" type="number" class="form-control" />
+                            <span asp-validation-for="DNI" class="text-danger"></span>
                         </div>
 
                         <div class="mb-3">
-                            <label for="Telefono" class="form-label">Teléfono</label>
-                            <input type="number" class="form-control" id="Telefono" name="Telefono" value="@Model.Telefono" required />
+                            <label asp-for="Telefono" class="form-label"></label>
+                            <input asp-for="Telefono" type="number" class="form-control" />
+                            <span asp-validation-for="Telefono" class="text-danger"></span>
                         </div>
+
                         <div class="mb-3">
-                            <label for="FechaNacimiento" class="form-label">Fecha de Nacimiento</label>
-                            <input type="date" class="form-control" placeholder="Fecha de Nacimiento" asp-for="FechaNacimiento" />
+                            <label asp-for="FechaNacimiento" class="form-label"></label>
+                            <input asp-for="FechaNacimiento" type="date" class="form-control" />
                             <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
                         </div>
+
                         <div class="mb-3">
-                            <label for="Domicilio" class="form-label">Domicilio</label>
-                            <input type="text" class="form-control" id="Domicilio" name="Domicilio" value="@Model.Domicilio" required />
+                            <label asp-for="Domicilio" class="form-label"></label>
+                            <input asp-for="Domicilio" class="form-control" />
+                            <span asp-validation-for="Domicilio" class="text-danger"></span>
                         </div>
 
                         <div class="mb-3">
-                            <label for="Ciudad" class="form-label">Ciudad</label>
-                            <input type="text" class="form-control" id="Ciudad" name="Ciudad" value="@Model.Ciudad" required />
+                            <label asp-for="Ciudad" class="form-label"></label>
+                            <input asp-for="Ciudad" class="form-control" />
+                            <span asp-validation-for="Ciudad" class="text-danger"></span>
                         </div>
-                        <div class="mb-3">
-                            <label for="Email" class="form-label">Provincia</label>
-                            <input type="text" class="form-control" id="Provincia" name="Provincia" value="@Model.Provincia" required />
-                        </div>
-                        <div class="mb-3">
-                            <label for="Email" class="form-label">Correo Electrónico</label>
-                            <input type="text" class="form-control" id="Email" name="Email" value="@Model.Email" required />
-                        </div>
-                        <input type="hidden" name="Cobertura" value="0"/>
 
+                        <div class="mb-3">
+                            <label asp-for="Provincia" class="form-label"></label>
+                            <input asp-for="Provincia" class="form-control" />
+                            <span asp-validation-for="Provincia" class="text-danger"></span>
+                        </div>
+
+                        <div class="mb-3">
+                            <label asp-for="Email" class="form-label"></label>
+                            <input asp-for="Email" type="email" class="form-control" />
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+
+                        <input type="hidden" asp-for="Cobertura" />
+                        <input type="hidden" asp-for="FechaAlta" />
 
                         <div class="d-flex justify-content-between align-items-center">
                             <button type="submit" class="btn btn-primary btn-lg">Crear Paciente</button>
