--- a/turno-smart/Views/Medico/Index.cshtml
+++ b/turno-smart/Views/Medico/Index.cshtml
@@ -96,6 +96,24 @@
             console.log(successMessage);
             console.log(errorMessage);
 
+            toastr.options = {
+                "closeButton": true,
+                "debug": false,
+                "newestOnTop": false,
+                "progressBar": true,
+                "positionClass": "toast-bottom-right",
+                "preventDuplicates": false,
+                "onclick": null,
+                "showDuration": "300",
+                "hideDuration": "1000",
+                "timeOut": "5000",
+                "extendedTimeOut": "1000",
+                "showEasing": "swing",
+                "hideEasing": "linear",
+                "showMethod": "fadeIn",
+                "hideMethod": "fadeOut"
+            };
+
             if (successMessage) {
                 toastr.success(successMessage);
             }
@@ -104,6 +122,5 @@
                 toastr.error(errorMessage);
             }
         });
-
     </script>
 }
