--- a/turno-smart/Views/Especialidad/Index.cshtml
+++ b/turno-smart/Views/Especialidad/Index.cshtml
@@ -95,23 +95,40 @@
         </div>
     </div>
 </div>
-
-@section Scripts{
+@section Scripts {
     <script>
         $(document).ready(function () {
-        var successMessage = '@TempData["SuccessMessage"]';
-        var errorMessage = '@TempData["ErrorMessage"]';
-        console.log(successMessage);
-        console.log(errorMessage);
+            var successMessage = '@TempData["SuccessMessage"]';
+            var errorMessage = '@TempData["ErrorMessage"]';
+            console.log(successMessage);
+            console.log(errorMessage);
 
-        if (successMessage) {
-        toastr.success(successMessage);
-        }
+            toastr.options = {
+                "closeButton": true,
+                "debug": false,
+                "newestOnTop": false,
+                "progressBar": true,
+                "positionClass": "toast-bottom-right",
+                "preventDuplicates": false,
+                "onclick": null,
+                "showDuration": "300",
+                "hideDuration": "1000",
+                "timeOut": "5000",
+                "extendedTimeOut": "1000",
+                "showEasing": "swing",
+                "hideEasing": "linear",
+                "showMethod": "fadeIn",
+                "hideMethod": "fadeOut"
+            };
 
-        if (errorMessage) {
-        toastr.error(errorMessage);
-        }
+            if (successMessage) {
+                toastr.success(successMessage);
+            }
+
+            if (errorMessage) {
+                toastr.error(errorMessage);
+            }
         });
-
     </script>
+
 }
