modificacion sobre el comportamiento de los modals, ahora son accesibles desde cualquier pagina sin necesidad de copiar y pegar codigo, tambien cada vez que se cierran se vacian

--- a/turno-smart/Views/Shared/_Layout.cshtml
+++ b/turno-smart/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
             <div class="flex-grow-1">
                 @RenderBody()
             </div>
+            <partial name="_Modals" />
             <partial name="_Footer" />
         </div>
     </div>
