--- a/turno-smart/Views/Turno/Edit.cshtml
+++ b/turno-smart/Views/Turno/Edit.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="modal-header">
-    <div class="modal-title h4">Modificá tu turno para  @Model.MedicoEspecialidad</div>
+    <div class="modal-title h4" id="modal-edit-label">Modificá tu turno para  @Model.MedicoEspecialidad</div>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
 
