--- a/turno-smart/Views/Shared/_RegistrationModal.cshtml
+++ b/turno-smart/Views/Shared/_RegistrationModal.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RegisterVM
 <div class="modal-header">
-    <h5 class="modal-title" id="registrationModalLabel">Registro</h5>
+    <h5 class="modal-title" id="modal-registration-label">Registro</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
 <div class="modal-body">
