--- a/turno-smart/Views/Turno/Delete.cshtml
+++ b/turno-smart/Views/Turno/Delete.cshtml
@@ -9,7 +9,7 @@
 @if(User.IsInRole("Paciente"))
 {
     <div class="modal-header">
-        <h5 class="modal-title" id="deleteModalLabel">Cancelar Turno</h5>
+        <h5 class="modal-title" id="modal-delete-label">Cancelar Turno</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body">
@@ -27,7 +27,7 @@
 else
 {
     <div class="modal-header">
-        <h5 class="modal-title" id="deleteModalLabel">Cancelar Turno</h5>
+        <h5 class="modal-title" id="modal-delete-label">Cancelar Turno</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body">
