--- a/turno-smart/Views/Shared/_AgendaDiaria.cshtml
+++ b/turno-smart/Views/Shared/_AgendaDiaria.cshtml
@@ -90,20 +90,25 @@
                                         <div class="btn-group">
                                             @if (User.IsInRole("Medico"))
                                             {
-                                                <button class="btn btn-primary btn-sm"
-                                                onClick="">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-text me-2"><path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"></path><path d="M14 2v4a2 2 0 0 0 2 2h4"></path><path d="M10 9H8"></path><path d="M16 13H8"></path><path d="M16 17H8"></path></svg>
-                                                    Historia Clínica
-                                                </button>
+                                                <form method="get" asp-action="Details" asp-controller="HistorialMedico">
+                                                    <input type="hidden" name="pacienteId" value="@turno.PacienteId" />
+                                                    <input type="hidden" name="medicoId" value="@turno.MedicoId" />
+                                                    <button type="submit" class="btn btn-primary btn-sm">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-text me-2"><path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"></path><path d="M14 2v4a2 2 0 0 0 2 2h4"></path><path d="M10 9H8"></path><path d="M16 13H8"></path><path d="M16 17H8"></path></svg>
+                                                        Historia Clínica
+                                                    </button>
+                                                </form>
                                             }
                                             else
                                             {
-                                                <form method="post" asp-action="TurnoConfirmed" asp-controller="Turno" asp-route-id="@turno.TurnoId">
-                                                    <button type="submit" class="btn btn-sucess btn-sm ms-2">
-                                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-calendar me-2"><path d="M8 2v4"></path><path d="M16 2v4"></path><rect width="18" height="18" x="3" y="4" rx="2"></rect><path d="M3 10h18"></path></svg>
-                                                        Confirmar
-                                                    </button>
-                                                </form>
+                                                if(turno.Estado.ToLower() != "confirmado") {
+                                                    <form method="post" asp-action="TurnoConfirmed" asp-controller="Turno" asp-route-id="@turno.TurnoId">
+                                                        <button type="submit" class="btn btn-sucess btn-sm ms-2">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-calendar me-2"><path d="M8 2v4"></path><path d="M16 2v4"></path><rect width="18" height="18" x="3" y="4" rx="2"></rect><path d="M3 10h18"></path></svg>
+                                                            Confirmar
+                                                        </button>
+                                                    </form>
+                                                } 
                                             }
                                             <form method="get" asp-action="Delete" asp-controller="Turno" asp-route-id="@turno.TurnoId" id="delete-btn">
                                                 <button type="submit" class="btn btn-warning btn-sm ms-2" data-bs-toggle="modal" data-bs-target="#modal-delete">
