--- a/turno-smart/Views/Home/Contacto.cshtml
+++ b/turno-smart/Views/Home/Contacto.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model turno_smart.ViewModels.HomeVM.ContactoViewModel
+
 @{
     ViewData["Title"] = "Contacto";
 }
@@ -19,7 +20,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 22s8-4.586 8-10a8 8 0 10-16 0c0 5.414 8 10 8 10z" />
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 11a3 3 0 110-6 3 3 0 010 6z" />
                     </svg>
-                    <p class="mb-0">Calle 123, Localidad, Partido, Provincia, CP 12345</p>
+                    <p class="mb-0">@Model.Direccion</p>
                 </div>
             </div>
 
@@ -30,8 +31,8 @@
                     <svg class="me-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 12H8m4-6h-4m4 12H8" />
                     </svg>
-                    <a href="mailto:hola@sitioincreible.com" class="text-custom text-decoration-none">
-                        hola@sitioincreible.com
+                    <a href="mailto:@Model.Correo" class="text-custom text-decoration-none">
+                        @Model.Correo
                     </a>
                 </div>
             </div>
@@ -43,14 +44,13 @@
                     <svg class="me-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4a1 1 0 011-1h4a1 1 0 011 1v3a1 1 0 01-1 1H4a1 1 0 01-1-1V4zm0 10a1 1 0 011-1h4a1 1 0 011 1v3a1 1 0 01-1 1H4a1 1 0 01-1-1v-3zm9-6a1 1 0 011-1h4a1 1 0 011 1v3a1 1 0 01-1 1h-4a1 1 0 01-1-1V8zm0 10a1 1 0 011-1h4a1 1 0 011 1v3a1 1 0 01-1 1h-4a1 1 0 01-1-1v-3z" />
                     </svg>
-                    <a href="tel:+541234567890" class="text-custom text-decoration-none">
-                        (54) 1234-5678
+                    <a href="tel:@Model.Telefono" class="text-custom text-decoration-none">
+                        @Model.Telefono
                     </a>
                 </div>
             </div>
 
             <!-- Botón de Agendar Consulta -->
-            @* <a asp-area="" asp-controller="Home" asp-action="Servicios" class="btn btn-light btn-lg mt-4">AGENDA UNA CONSULTA</a> *@
             <partial name="_AgendarConsultarButton" />
         </div>
 
