--- a/turno-smart/Views/Especialidad/Index.cshtml
+++ b/turno-smart/Views/Especialidad/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ListEspecialidadVM
+
 @Html.AntiForgeryToken()
 @{
     ViewData["Title"] = "Especialidades";
@@ -56,12 +57,7 @@
                                     {
                                         <div class="ms-auto">
                                             <!-- Botón para Editar -->
-                                            <a asp-controller="Especialidad"
-                                               asp-action="Edit"
-                                               asp-route-id="@item.Id"
-                                               class="btn btn-sm btn-primary me-1">
-                                                Editar
-                                            </a>
+                                            <button class="btn btn-sm btn-primary me-1" onclick="editarValor(@item.Id,'@item.Nombre')";>Editar</button>
 
                                             <!-- Botón para Detalles -->
                                             <a asp-controller="Especialidad"
@@ -95,8 +91,51 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editModalLabel">Editar Especialidad</h5>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-3">
+                        <label class="form-label">Nombre de Especialidad</label>
+                        <input type="text" class="form-control" id="elementName" name="Name" placeholder="Introduce un nombre">
+                    </div>
+                    <input type="hidden" id="elementId" name="Id">
+                    <input type="submit" value="Guardar" class="btn btn-primary" />
+                    <button onclick="cerrarModal();" class="btn btn-danger">Cerrar</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 @section Scripts {
     <script>
+
+        function editarValor(id, valor){
+            
+            var idaguardar = document.getElementById("elementId");
+            var input = document.getElementById("elementName");
+            input.value = valor;
+            idaguardar.value = id;
+
+            var editModal = document.getElementById("editModal");
+            var modal = bootstrap.Modal.getOrCreateInstance(editModal);
+            modal.show();
+            
+        }
+        
+
+        function cerrarModal(){
+            var editModal = document.getElementById("editModal");
+            var modal = bootstrap.Modal.getOrCreateInstance(editModal);
+            modal.hide();
+        }
+
+
         $(document).ready(function () {
             var successMessage = '@TempData["SuccessMessage"]';
             var errorMessage = '@TempData["ErrorMessage"]';
