Agregar modal para editar pacientes

--- a/turno-smart/Views/Medico/Create.cshtml
+++ b/turno-smart/Views/Medico/Create.cshtml
@@ -41,12 +41,12 @@
 
                     <div class="mb-3">
                         <label for="Reseña" class="form-label">Reseña</label>
-                        <textarea class="form-control" id="Reseña" name="Reseña" rows="3" placeholder="Escribe una reseña del médico">@Model.Reseña</textarea>
+                        <textarea class="form-control" id="Reseña" name="Reseña" rows="3" placeholder="Escribe una reseña del médico" required>@Model.Reseña</textarea>
                     </div>
 
                     <div class="mb-3">
                         <label for="Imagen" class="form-label">URL de la Imagen</label>
-                        <input type="text" class="form-control" id="Imagen" name="Imagen" value="@Model.Imagen" placeholder="https://example.com/imagen.jpg" />
+                        <input type="text" class="form-control" id="Imagen" name="Imagen" value="@Model.Imagen" placeholder="https://example.com/imagen.jpg" required />
                     </div>
 
                         <div class="mb-3">
