Matricula para Medicos en creacion y edicion

--- a/turno-smart/Views/Medico/Create.cshtml
+++ b/turno-smart/Views/Medico/Create.cshtml
@@ -48,6 +48,10 @@
                         <label for="Imagen" class="form-label">URL de la Imagen</label>
                         <input type="text" class="form-control" id="Imagen" name="Imagen" value="@Model.Imagen" placeholder="https://example.com/imagen.jpg" required />
                     </div>
+                    <div class="mb-3">
+                        <label for="Matricula" class="form-label">Matrícula</label>
+                        <input type="number" class="form-control" id="Matricula" name="Matricula" value="@Model.Matricula" required />
+                    </div>
 
                         <div class="mb-3">
                             <label for="IdEspecialidad" class="form-label">Especialidad</label>
