--- a/turno-smart/Views/Especialidad/Details.cshtml
+++ b/turno-smart/Views/Especialidad/Details.cshtml
@@ -1,32 +1,22 @@
 ﻿@model turno_smart.ViewModels.EspecialidadVM.EspecialidadVM
+@{
+    Layout = null;
+}
 
-<div class="container py-5">
-    <div class="row mb-4">
-        <div class="col-lg-8">
-            <h2>Detalles de Especialidad</h2>
+<div class="modal-header">
+    <div class="modal-title h4" id="modal-details-label">Detalles de Especialidad</div>
+    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+</div>
+<div class="modal-body">
+    <p class="text-muted mb-4">Complete los datos para actualizar la especialidad en el sistema.</p>
+        <dl class="row">
+            <dt class="col-sm-4">Nombre</dt>
+            <dd class="col-sm-8">@Model.Nombre</dd>
 
-            <div>
-                <h4>Especialidad</h4>
-                <hr />
-                <dl class="row">
-                    <dt class="col-sm-2">
-                        Nombre
-                    </dt>
-                    <dd class="col-sm-10">
-                        @Model.Nombre
-                    </dd>
-                    <dt class="col-sm-2">
-                        Descripción
-                    </dt>
-                    <dd class="col-sm-10">
-                        @Model.Descripcion
-                    </dd>
-                </dl>
-            </div>
-            <div>
-                <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Editar</a> |
-                <a asp-action="Index">Volver a la lista</a>
-            </div>
+            <dt class="col-sm-4">Descripción</dt>
+            <dd class="col-sm-8">@Model.Descripcion</dd>
+        </dl>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
         </div>
-    </div>
 </div>
