--- a/turno-smart/Views/Shared/_Navbar.cshtml
+++ b/turno-smart/Views/Shared/_Navbar.cshtml
@@ -31,10 +31,15 @@
                     <a class="text-white nav-link" asp-area="" asp-controller="Turno" asp-action="Index">Agenda</a>
                     <a class="text-white nav-link" asp-area="" asp-controller="Medico" asp-action="Index">Medicos</a>
                     <a class="text-white nav-link" asp-area="" asp-controller="Paciente" asp-action="Index">Pacientes</a>
+                    <a class="text-white nav-link" asp-area="" asp-controller="Recepcionista" asp-action="Index">Recepcionistas</a>
                     <a class="text-white nav-link" asp-area="" asp-controller="Especialidad" asp-action="Index">Especialidades</a>
-
                 }
-                @if (!(@User.IsInRole("Medico") || @User.IsInRole("Admin")))
+                else if (SignInManager.IsSignedIn(User) && @User.IsInRole("Recepcionista"))
+                {
+                    <a class="text-white nav-link" asp-area="" asp-controller="Turno" asp-action="Index">Agenda</a>
+                    <a class="text-white nav-link" asp-area="" asp-controller="Paciente" asp-action="Index">Pacientes</a>
+                }
+                @if (!(@User.IsInRole("Medico") || @User.IsInRole("Admin") || @User.IsInRole("Recepcionista")))
                 {
                     <a class="text-white nav-link" asp-area="" asp-controller="Home" asp-action="Contacto">Contacto</a>
                     <a class="text-white nav-link" asp-area="" asp-controller="Home" asp-action="Institucion">Institución</a>
