dejando generico el uso de modales para turnos

--- a/turno-smart/Views/Turno/Delete.cshtml
+++ b/turno-smart/Views/Turno/Delete.cshtml
@@ -17,7 +17,7 @@
         <p class="text-muted mb-0">Fecha: @Model.FechaTurno.ToString("g") Hs</p>
     </div>
     <div class="modal-footer">
-        <form method="post" asp-action="DeleteConfirmed" asp-controller="Turno" id="turno-delete-form">
+        <form method="post" asp-action="DeleteConfirmed" asp-controller="Turno" id="delete-form">
             <input type="hidden" asp-for=Id/>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
             <button type="submit" class="btn btn-danger">Eliminar</button>
@@ -35,7 +35,7 @@ else
         <p class="text-muted mb-0">Fecha: @Model.FechaTurno.ToString("g") Hs</p>
     </div>
     <div class="modal-footer">
-        <form method="post" asp-action="DeleteConfirmed" asp-controller="Turno" id="turno-delete-form">
+        <form method="post" asp-action="DeleteConfirmed" asp-controller="Turno" id="delete-form">
             <input type="hidden" asp-for=Id />
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
             <button type="submit" class="btn btn-danger">Eliminar</button>
